syntax = "proto3";

package evaluation;

service EvaluationService {
    rpc FetchAll(FetchAllRequest)returns(FetchAllResponse){}
    rpc FindById(FindByIdRequest)returns(FindByIdResponse){}
}

message MultiBusinessTerm{
    int32 id = 1;
    string business_term_name = 2;
    string business_term_start_date =3;
    string business_term_end_date =4;
    string multi_term_start_date =5;
    string multi_term_end_date =6;
}

message FetchAllRequest{}

message FetchAllResponse{
    repeated MultiBusinessTerm multi_business_term_list = 1;
}

message FindByIdRequest{
    int32 id = 1;
}

message FindByIdResponse{
    MultiBusinessTerm multi_business_term = 1;
}
