syntax = "proto3";

package multi_evaluation.v1;

service MultiEvaluationService {
    rpc FetchAll(FetchAllRequest)returns(FetchAllResponse){}
}

message MultiBusinessTerm{
    int32 id = 1;
    string business_term_name = 2;
    string business_term_start_date =3;
    string business_term_end_date =4;
    string multi_term_start_date =5;
    string multi_term_end_date =6;
}

message FetchAllRequest{
    int32 take  = 1;
    bool order_by = 2;
}

message FetchAllResponse{
    repeated MultiBusinessTerm multi_business_term_list = 1;
}
